# iroha

./: CMakeLists.txt  dependencies.cmake
core/consensus/: sumeragi.cpp
core/consensus/connection/: connection.hpp
core/infra/connection/: connection_service_impl.cpp  connection_with_grpc_fff.cpp  connection_with_grpc_flatbuffer.cpp  scheduled_task_to_consensus.hpp
core/infra/connection/with_grpc_flatbuf/: client.hpp  server.hpp
core/infra/flatbuf/: main.fbs
core/util/: CMakeLists.txt  logger.cpp  logger.hpp
flatbuf/: CMakeLists.txt
test/module/consensus/: sumeragi_test.cpp
tt/: main_generated.h
